Ok, added programa

--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -13,8 +13,8 @@ Adibidez, demagun honako programa oso sinple bat dugula, erabiltzaileari zenbaki
 
 ```python
 balioa = input ("Sartu zenbaki bat:")
-balioa = int (balioa)
-karratua = balioa* balioa
+balioa = int(balioa)
+karratua = balioa * balioa
 print ("Karratua da:", karratua)
 ```
 
@@ -23,7 +23,7 @@ Erabiltzaileak behar ez duena sartzen badu, honako hau ikusiko dugu:
 ```console
 Sartu zenbaki bat: x
 Traceback (most recent call last):
-File "saltaexcepcion.py", line 2, in < module>
+File "salbuespena.py", line 2, in < module>
 balioa = int (balioa)
 ValueError: invalid literal for int () with base 10: 'x'
 ```
@@ -32,9 +32,9 @@ Salbuespen baten bidez, programak huts egitea ekidin dezakegu, eta gutxienez era
 
 ```python
 try:
-codigo_que_puede_huts egin
-salbuespen:
-codigo_que_se_ejecuta_si_hay_error
+  huts_egin_dezakeen_kodea
+exception:
+  huts_egitean_gertatzen_dena
 ```
 
 Ikus dezagun aurreko adibidea, salbuespen-blokearen barruan kode sentikorra babestuz:
@@ -43,11 +43,11 @@ Ikus dezagun aurreko adibidea, salbuespen-blokearen barruan kode sentikorra babe
 balioa = input ("Sartu zenbaki bat:")
 
 try:
-balioa = int (balioa)
-karratua = balioa* balioa
-print ("Karratua da:", karratua)
-salbuespen:
-print ("Errorea datua bihurtzean!")
+  balioa = int (balioa)
+  karratua = balioa* balioa
+  print ("Karratua da:", karratua)
+exception:
+  print ("Errorea datua bihurtzean!")
 ```
 
 Orain, datu oker bat sartuz gero, honako hau ikusiko dugu:
@@ -72,10 +72,10 @@ Fitxategi bat irakurri ahal izateko, alde batetik fitxategi hori egon behar da, 
 Kode honetan, programaren leku berean dagoen fitxategi bat irakurtzen da:
 
 ```python
-fitxategia = open ("texto.txt", "r")
-edukia = fichero.read ()
-print (edukia)
-fichero.close ()
+fitxategia = open("texto.txt", "r")
+edukia = fichero.read()
+print(edukia)
+fichero.close()
 ```
 
 Kontuan hartzekoak:
@@ -98,10 +98,10 @@ oso erraz
 Aurreko adibidean, bat-batean irakurri dugu fitxategiaren eduki osoa, testu-aldagai batean gordeta. Baina batzuetan, baliteke online fitxategia irakurri nahi izatea. Horretarako, honako funtzio hau erabili behar dugu:
 
 ```python
-fitxategia = open ("texto.txt", "r")
-lineak = fichero.readline ()
+fitxategia = open("texto.txt", "r")
+lineak = fichero.readline()
 for linea in lineak:
-print (linea)
+  print (linea)
 
 fichero.close ()
 ```
@@ -116,9 +116,9 @@ Erreparatzen badiozu, JSON* motako objektuak Python-eko hiztegien berdinak dira!
 
 ```python
 [
-{"id": 66, "izena": "Ada"},
-{"id": 2, "izena": "Neko"},
-{"id": 4, "izena": "Bug"}
+  {"id": 66, "izena": "Ada"},
+  {"id": 2, "izena": "Neko"},
+  {"id": 4, "izena": "Bug"}
 ]
 ```
 
@@ -134,9 +134,9 @@ fitxategia = open ("texto.json", "r")
 edukia = json.load (fitxategia)
 
 for edukirik gabeko pertsonaia:
-print (pertsonaia ["izena"])
+  print (pertsonaia ["izena"])
 
-fichero.close ()
+fitxategia.close ()
 ```
 
 Pantaila batetik, hau ikusiko dugu:
@@ -158,9 +158,9 @@ Kode honekin, testu-lerro pare bat idatziko ditugu fitxategian:
 
 ```python
 fitxategia = open ("texto.txt", "w")
-fichero.write ("Lerro bat\n idazten dut")
-fichero.write ("Beste lerro bat idazten dut\n")
-fichero.close ()
+fitxategia.write("Lerro bat\n idazten dut")
+fitxategia.write("Beste lerro bat idazten dut\n")
+fitxategia.close()
 ```
 
 KONTUZ! Horrela idazten badugu, fitxategiaren edukia txikituko dugu.
@@ -175,9 +175,9 @@ Edukia gehituz idatzi nahi badugu, fitxategia "a" moduan ireki behar dugu:
 
 ```python
 fitxategia = open ("texto.txt", "a")
-fichero.write ("Gehitu lerro bat\n")
-fichero.write ("Gehitu beste lerro bat\n")
-fichero.close ()
+fitxategia.write("Gehitu lerro bat\n")
+fitxategia.write("Gehitu beste lerro bat\n")
+fitxategia.close ()
 ```
 
 Orain, fitxategiaren edukia hau izango litzateke:
@@ -200,16 +200,16 @@ Gero elementu bat gehituko diogu zerrenda horri. Fitxategia berriro irekiko dugu
 ```python
 import json
 
-fitxategia = open ("texto.json", "r")
-edukia = json.load (fitxategia)
-fichero.close ()
+fitxategia = open("texto.json", "r")
+edukia = json.load(fitxategia)
+fitxategia.close ()
 
 pertsonaia = {"id": 666, "izena": "Gumball"}
-edukia.append (pertsonaia)
+edukia.append pertsonaia)
 
-fitxategia = open ("texto.json", "w")
-fichero.write (json.dumps (edukia))
-fichero.close ()
+fitxategia = open("texto.json", "w")
+fitxategia.write(json.dumps (edukia))
+fitxategia.close()
 ```
 
 # Liburutegiak
@@ -218,28 +218,29 @@ Programak gero eta konplexuagoak diren heinean, litekeena da funtzio asko defini
 Dena fitxategi berean eduki dezakegun arren, ez litzateke gure kodea antolatzeko modurik onena. Egokiena da klase bakoitza bere fitxategian bereiztea, eta funtzio edo funtzio-multzo bakoitza bere fitxategian.
 
 Kodea fitxategietan eta karpetetan antolatu ondoren, beste fitxategi batzuetan berrerabil ditzakegu. Ikus dezagun adibide sinple bat.
-Funtzio hau definituko dugu `mates.pymes 'izeneko fitxategi batean:
+Funtzio hau definituko dugu `matematika.py` izeneko fitxategi batean:
+
 ```python
 Batuketa (a, b):
-return a + b
+  return a + b
 
-def restar (a, b):
-return a - b
+  def kendu(a, b):
+    return a - b
 
-def handitu (a):
-return a - 1
+  def batu(a):
+    return a - 1
 ```
 
 Orain, fitxategi hori beste programa batean sar dezakegu, `axola dio 'aginduaren bidez. Direktorio berean badaude, besterik gabe egin daiteke:
 
 ```python
-import mates
+import matematika
 
-balioespena 1 = 5
-balioespena 2 = 10
+balio1 = 5
+balio2 = 10
 
-emaitza = mates.batu (1. balorazioa, 2. balorazioa)
-print (emaitza) # 15
+emaitza = matematika.batu(balio1, balio2)
+print(emaitza) # 15
 ```
 
 6.0 ariketa
@@ -251,30 +252,30 @@ Generar.ete fitxategia:
 ```python
 import random
 
-def aleatorioa (max):
-return random.randint (0, max - 1)
+def ausazkoa (max):
+    return random.randint(0, max - 1)
 
-def crearPassword (luzera):
-karaktereak = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l",
-"m", "n", "ñ", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z",
-"0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ".", "-", "_", "!", "$"]
-pasahitza = ""
+def pasahitzaSortu (luzera):
+    hizkiak = ["a","b","c","d","e","f","g","h","i","j","k","l",
+        "m","n","ñ","o","p","q","r","s","t","u","v","w","x","y","z",
+        "0","1","2","3","4","5","6","7","8","9",".","-","_","!","$"]
+    pasahitza = ""
 
-for i in range (luzera):
-caracter = karaktereak [ausazkoa (len (karaktereak))]
-password = password + caracter
+    for i in range(luzera):
+        hizkia = hizkiak[ausazkoa(len(hizkiak))]
+        pasahitza = pasahitza + hizkia
 
-return password
+    return pasahitza
 ```
 
 Eta 1 ETE fitxategian erabiltzen dugu:
 
 ```python
-inport sortu
+import sortu
 
-password = generar.crearPassword (8)
+pasahitza = sortu.pasahitzaSortu(8)
 
-print (pasahitza)
+print(pasahitza)
 ```
 
 Emaitza:
@@ -283,28 +284,28 @@ Emaitza:
 g3ep-ahx
 ```
 
-Klaseekin gauza bera egin daiteke. Demagun `LectorPantallaa 'izeneko klasea dugula `lector_pantalla.py`izeneko fitxategi batean. Kontsolatik datuak irakurtzeko aukera ematen digun klase bat da:
+Klaseekin gauza bera egin daiteke. Demagun `PantailaIrakurgailua` izeneko klasea dugula `lector_pantalla.py`izeneko fitxategi batean. Kontsolatik datuak irakurtzeko aukera ematen digun klase bat da:
 
 ```python
-class IrakurgailuaPantaila:
-def leerOsoa (self, mensaje = "Sartu zenbaki bat:"):
-numero = input (mezua)
-return int (zenbakia)
+class PantailaIrakurgailua:
+  def irakurZenbaki self, mensaje = "Sartu zenbaki bat:"):
+    numero = input (mezua)
+    return int (zenbakia)
 
-def leerTestua (self, mensaje = "Sartu testua:")
-testua = input (mezua)
-return testua
+  def irakurTestua(self, mensaje = "Sartu testua:")
+    testua = input (mezua)
+    return testua
 ```
 
 Orain, klase hori beste fitxategi batean berrerabil dezakegu, gure fitxategiarekin batera.
 
 ```python
-inport lector_pantaila
-import mates
+import pantaila_irakurgailua
+import matematika
 
-irakurlea_pantaila. Pantaila irakurgailua ()
-valor1 = irakurlea.osoa ()
-print (mates.handitu (baloratu 1))
+irakurgailua.PantailaIrakurgailua()
+balio1 = irakurgailua.irakurZenbaki()
+print (matematika.batu(balio1))
 ```
 
 Pantailan horrelako zerbait ikus daiteke:
@@ -328,29 +329,29 @@ Fitxategia:
 
 ```python
 class Menu:
-def __init__ (self, aukerak):
-self._aukerak = aukerak
+    def __init__ (self, aukerak):
+        self._aukerak = aukerak
 
-def erakutsi (self):
-for i in range (len (self._opciones)):
-print (f "{i+1} {self._opciones [i]}")
+    def erakutsi (self):
+        for i in range(len(self._aukerak)):
+            print(f"{i+1} {self._aukerak[i]}")
 
-def hautatu (self, zenbakia):
-return numero > 0 and numero < = len (self._opciones)
-
+    def hautatu (self, zenbakia):
+        return zenbakia > 0 and zenbakia <= len(self._aukerak)
 ```
 
-2 ETEa fitxategia:
+2.py fitxategia, programa nagusia:
 
 ```python
 import menu
-miMenu = menu. Menua (["Erakutsi", "Ezabatu", "Irten"])
+nireMenua = menua.Menu(["Erakutsi", "Kendu", "Irten"])
 
-miMenu.mostrar ()
-if miMenu.hautatu (1):
-print ("Oraingo 1. aukera")
-LKse:
-print ("1. aukera ez dago")
+nireMenua.erakutsi()
+
+if nireMenua.aukeratu(1):
+    print("1. aukera badado menuan")
+else:
+    print("1. aukera ez dago menu honetan")
 ```
 
 Emaitza:
@@ -366,11 +367,11 @@ Oraingo 1. aukera
 
 6.0 ariketa
 
-Sortu `Ficheroere 'izeneko klase bat, honako funtzio hauekin:
+Sortu `Fitxategia` izeneko klase bat, honako funtzio hauekin:
 
-1. `def __init__ (self, fitxategia): ireki beharreko fitxategia jasotzen du parametro gisa.
-2. `def leer (self) ": fitxategiaren edukia jasotzen duen kate bat itzultzen du.
-3. "def escribir (self, contenido)": fitxategian parametro gisa pasatzen zaion edukia idazten du.
+1. `def __init__ (self, fitxategia)`: ireki beharreko fitxategia jasotzen du parametro gisa.
+2. `def irakurri (self)`: fitxategiaren edukia jasotzen duen kate bat itzultzen du.
+3. `def idatzi (self, edukia)`: fitxategian parametro gisa pasatzen zaion edukia idazten du.
 
 Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
@@ -378,35 +379,33 @@ Fitxategia:
 
 ```python
 class Fitxategia:
-def __init__ (self, izenaFitxategia):
-self._nombreFichero = nombreFichero
+  def __init__(self, nombreFichero):
+      self._nombreFichero = nombreFichero
 
-def leer (self):
-fitxategia = open (self._nombreFichero, "r")
-datuak = fichero.read ()
-fichero.close ()
+  def irakurri(self):
+      fitxategia = open(self._nombreFichero, "r")
+      datuak = fitxategia.read()
+      fitxategia.close()
 
-datuak itzultzea
+      return datuak
 
-def idatzi (self, edukia):
-fitxategia = open (self._nombreFichero, "w+")
-fichero.write (edukia)
-fichero.close ()
+  def idatzi(self, eduki):
+      fitxategia = open(self._nombreFichero, "w+")
+      fitxategia.write(eduki)
+      fitxategia.close()
 ```
 
-Fitxategia: 6.0.txt`:
+6.0.txt fitxategia, programa nagusia:
 
 ```python
-from datetime import date
+import fitxategia
 
-fitxategiaren inport
+miFichero = fitxategia.Fichero("6.0.txt")
 
-miFichero = fichero. Fitxategia ("6.0.txt")
+print("Aurreko edukia: ", miFichero.leer())
 
-print ("Aurreko edukia:", miFichero.leer ()
-
-miFichero.escribir ("Edukia aldatuta!!!" + str (date.today ()))
-print ("Edukia:", miFichero.leer ())
+miFichero.escribir("Eduki aldatuta!!! " + str(date.today()))
+print("Edukia:", miFichero.leer())
 ```
 
 Testu-fitxategia:
@@ -439,68 +438,72 @@ Zerrenda fitxategia:
 import json
 
 class Zerrenda:
-def __init__ (self, izenaFitxategia):
-edukia = open (izenaFitxategia, "r")
-self._datos = json.load (edukia)
-edukina.close ()
+  def __init__ (self, nombreFichero):
+      contenido = open(nombreFichero, "r")
+      self._datos = json.load(contenido)
+      contenido.close()
 
-def existitzen da (self, izena):
-for dato in self._datos:
-if datua ["izena"] = = izena:
-return True
+  def existitzenDa (self, izena):
+      for datu in self._datos:
+          if datu["izena"] == izena:
+              return True
 
-return False
+      return False
 
-def aMinuskulak (self):
-self._datos = list (map (lambda dato: {"id": datua ["id"], "izena": datua ["izena"] .lower ()}, self._datos)
+  def minuskulatuta (self):
+      self._datos = list(map(lambda datu: { "id": datu["id"], "izena": datu["izena"].lower() }, self._datos))
 
-def posicion (self, izena):
-i = 0
-for dato in self._datos:
-if datua ["izena"] = = izena:
-return i
-i + = 1
-return -1
+  def posizioa (self, izena):
+      i = 0
+      for datu in self._datos:
+          if datu["izena"] == izena:
+              return i
+          i += 1
+      return -1
 
-def print (self):
-for dato in self._datos:
-print (datua)
+  def inprimatu (self):
+      for datu in self._datos:
+          print(datu)
 
 ```
 
-6.1 ETEa fitxategia:
+6.1 fitxategia, programa nagusia:
 
 ```python
-zerrenda import
-miLista = lista. Zerrenda ("6.1.json")
+import zerrenda
 
-if miListado.badago ("eugene"):
-print ("Badago!")
+nire_zerrenda = zerrenda.inprimatu("6.1.json")
 
-NireZerrenda.aMinuskulak ()
-miListado.print ()
+badaude = nire_zerrenda.existitzenDa("eugene")
+if badaude:
+    print("Dago!")
 
-if miListado.badago ("eugene"):
-print ("Badago!")
-print (miListado.posicion ('eugene'))
+nire_zerrenda.minuskulatuta()
+nire_zerrenda.print()
+
+badaude = nire_zerrenda.existitzenDa("eugene")
+if badaude:
+    posizioa = nire_zerrenda.posizioa('eugene')
+    print("Dago!")
+    print(posizioa)
 ```
 
 `6.1.json«fitxategia:
 
 ```javascript
 [
-{
-"id": 3,
-"Izena": "Juan"
-},
-{
-"id": 5,
-"Izena": "Eugene"
-},
-{
-"id": 10,
-"Izena": "Paul"
-}
+    {
+        "id": 3,
+        "izena": "Juan"
+    },
+    {
+        "id": 5,
+        "izena": "Eugene"
+    },
+    {
+        "id": 10,
+        "izena": "Paul"
+    }
 ]
 ```
 
@@ -532,33 +535,33 @@ Fitxategia: `tareas.py`
 import json
 
 class Zereginak:
-def __init__ (self):
-fitxategia = open ("tareas.json", "r")
-self._tareas = json.load (fitxategia)
-fichero.close ()
+  def __init__ (self):
+      fitxategia = open("zereginak.json", "r")
+      self._zereginak = json.load(fitxategia)
+      fitxategia.close()
 
-def sortu (self, id, zeregina):
-berria = {"id": id, "zeregina": zeregina};
-self._tareas.append (berria)
+  def sortu (self, id, tarea):
+      berria = { "id": id, "tarea": tarea };
+      self._zereginak.append(berria)
 
-def gorde (self):
-fitxategia = open ("tareas.json", "w")
-fichero.write (json.dumps (self._atazak))
-fichero.close ()
+  def gorde (self):
+      fitxategia = open("zereginak.json", "w")
+      fitxategia.write(json.dumps(self._zereginak))
+      fitxategia.close()
 
-def ezabatu (self, id):
-self._tareas = list (filter (lambda dato: dato ["id"]! = id, self._tareas)
+  def ezabatu(self, id):
+      self._zereginak = list(filter(lambda dato: dato["id"] != id, self._zereginak))
 
-def erakutsi (self):
-emaitza = "
-for dato in self._atazak:
-emaitza + = json.dumps (datua) + "\n"
+  def erakutsi (self):
+      emaitza = ""
+      for dato in self._zereginak:
+          emaitza += json.dumps(dato) + "\n"
 
-erreturn emaitza
+      return emaitza
 
 ```
 
-Fitxategia: `tareas.json`:
+Fitxategia: `zereginak.json`:
 
 ``javascript
 [
@@ -570,45 +573,46 @@ Fitxategia: `tareas.json`:
 Fitxategia:
 
 ```python
-Atazen inport
-misTareas = atazak. Zereginak ()
+import zereginak
 
-print (nireTareak.erakutsi (), "\n---")
+nireZereginak = zereginak.Tareas()
 
-miTareak.sortu (2, "Jan")
-print (nireTareak.erakutsi (), "\n---")
+print(nireZereginak.erakutsi(), "\n---")
 
-misTareas.eliminatu (2)
-print (nireTareak.erakutsi (), "\n---")
+nireZereginak.sortu(2, "Eskatzak")
+print(nireZereginak.erakutsi(), "\n---")
 
-misTareas.crear (66, "Irakurri")
-print (nireTareak.erakutsi (), "\n---")
-misTareas.gorde ()
+nireZereginak.ezabatu(2)
+print(nireZereginak.erakutsi(), "\n---")
+
+nireZereginak.sortu(66, "Irakurri")
+print(nireZereginak.erakutsi(), "\n---")
+nireZereginak.gorde()
 ```
 
 Emaitza:
 
 ```console
-{"Zeregina": "Go ikastea", "id": 3}
-{"ataza": "Rust ikertu", "id": 5}
-"Ataza": "Lo m\u00e1s", "Id": 10}
+{"zeregina": "Go ikasi", "id": 3}
+{"zeregina": "Rust ikertu", "id": 5}
+{"zeregina": "Lo egin", "id": 10}
 
 - --
-{"Zeregina": "Go ikastea", "id": 3}
-{"ataza": "Rust ikertu", "id": 5}
-"Ataza": "Lo m\u00e1s", "Id": 10}
-{"ataza": "Jan", "id": 2}
+{"zeregina": "Go ikasi", "id": 3}
+{"zeregina": "Rust ikertu", "id": 5}
+{"zeregina": "Lo egin", "id": 10}
+{"zeregina": "Jan", "id": 2}
 
 - --
-{"Zeregina": "Go ikastea", "id": 3}
-{"ataza": "Rust ikertu", "id": 5}
-"Ataza": "Lo m\u00e1s", "Id": 10}
+{"zeregina": "Go ikasi", "id": 3}
+{"zeregina": "Rust ikertu", "id": 5}
+{"zeregina": "Lo egin", "id": 10}
 
 - --
-{"Zeregina": "Go ikastea", "id": 3}
-{"ataza": "Rust ikertu", "id": 5}
-"Ataza": "Lo m\u00e1s", "Id": 10}
-"Ataza": "Irakurri", "Id": 66}
+{"zeregina": "Go ikasi", "id": 3}
+{"zeregina": "Rust ikertu", "id": 5}
+{"zeregina": "Lo egin", "id": 10}
+{"zeregina": "Irakurri", "Id": 66}
 
 - --
 ```
@@ -634,78 +638,80 @@ Ikasgelan, `Jugadora` klasea inportatu beharko duzu, erabili ahal izateko.
 
 ```python
 class Jokalaria:
-def __init__ (self, izena, dortsala):
-self._izena = izena
-self._dortsal = dortsala
+  def __init__ (self, izena, dorsal):
+      self._izena = izena
+      self._zenbakia = zenbakia
 
-@property
-def izena (self):
-return self._izena
+  @property
+  def izena (self):
+      return self._izena
 
-@nombre.setter
-def izena (self, izena):
-self._izena = izena
+  @izena.setter
+  def izena (self, izena):
+      self._izena = izena
 
-@property
-def dortsala (self):
-return self._dortsala
+  @property
+  def zenbakia (self):
+      return self.zenbakia
 
-@dorsal.setter
-def dortsala (self, dortsala):
-self._dortsal = dortsala
+  @zenbakia.setter
+  def zenbakia (self, zenbakia):
+      self._zenbakia = zenbakia
 
-def toString (self):
-return f "{self._nombre} {self._dorsal}"
+  def toString (self):
+      return self._izena + " " + str(self._zenbakia)
 ```
 
 TXTen taldea fitxategia:
 
 ```python
 import json
-Jokalariaren prezioa
+import jokalaria
 
 class Taldea:
-def kargatu (self):
-edukia = open ("./jugadoreak.json")
-jokalariak = json.load (edukia)
-print ("Loaded:", jokalariak)
-self._jugadores = []
-for j in jugadores:
-self._jugadores.append (jokalaria. Jokalaria (j ["izena"], j [dortsala "])
+  def karga(self):
+      edukia = open("./jokalariak.json")
+      jokalariak = json.load(edukia)
+      print("Kargatuta:", jokalariak)
+      self._jokalariak = []
+      for j in jokalariak:
+          self._jokalariak.append(jokalaria.Jokalaria(j["izena"], j["dorsala"]))
 
-def fitxaketa (self, izena, dortsala):
-berriaFitxaketa = jokalaria. Jokalaria (izena, dortsala)
-self._jugadores.append (Fitxaketa berria)
-def erakutsi (self):
-for jokalari in self._jugadores:
-print (jokalaria.toString ())
+  def fitxaketa(self, izena, dorsala):
+      fitxategiBerria = jokalaria.Jokalaria(izena, dorsala)
+      self._jokalariak.append(fitxategiBerria)
+
+  def inprimatu(self):
+      for jokalaria in self._jokalariak:
+          print(jokalaria.toString())
 ```
 
 Jokalarien fitxategia:
 
 ```python
 [
-{
-"izena": "Maradona",
-"dortsala": 10
-},
-{
-"Izena": "Pele",
-"dortsala": 8
-}
+    {
+        "izena": "Maradona",
+        "dorsala": 10
+    },
+    {
+        "izena": "Pele",
+        "dorsala": 8
+    }
 ]
 ```
 
-Fitxategia: `6.3 TXT`:
+`6.3 TXT` fitxategia, programa nagusiarekin:
 
 ```python
-taldeko import
-miEquipo = taldea. Taldea ()
+import taldea
 
-nire taldea.kargatu ()
-NireTaldea.erakutsi ()
-Nire taldea.fitxaketa ("Gento", 11)
-NireTaldea.erakutsi ()
+nireTaldea = taldea.Taldea()
+
+nireTaldea.kargatu()
+nireTaldea.inprimatu()
+nireTaldea.fitxaketa("Gento", 11)
+nireTaldea.inprimatu()
 ```
 
 Emaitza:
