--- a/book_eu/07.md
+++ b/book_eu/07.md
@@ -36,53 +36,53 @@ Demagun kalkulagailu bat irudikatzen duen klase hau dugula:
 
 ```python
 class Kalkulagailua:
-def batuketa (self, a, b):
-return a + b
+  def batu (self, a, b):
+    return a + b
 
-def restar (self, a, b):
-return a - b
+  def kendu (self, a, b):
+    return a - b
 
-def multiplicar (self, a, b):
-return a* b
+  def biderkatu (self, a, b):
+    return a* b
 
-def zatitu (self, a, b):
-return a/b
+  def zatitu (self, a, b):
+    return a/b
 ```
 
 Mota horretako test unitarioak egiteko, nahikoa litzateke beste mota hau sortzea, eta hori `unittestere 'liburu-dendako testa-mota baten oinordekoa izango litzateke. Kalkulagailua bera ere inportatu behar dugu, proban jarri behar baitugu.
 Gelako funtzio bakoitzak kalkulagailuaren funtzio bakoitza egiaztatzen du. Nahi adina test egin daitezke, funtzioek behar dutena egiten dutela frogatzeko. Ikus dezakezunez, test bakoitzak funtzio bat exekutatzen du funtsean, eta emaitza esperotakoa dela egiaztatzen du, honako hau erabiliz:
 
 ```python
-def test_suma (self):
-c = kalkulagailua. Kalkulagailua ()
-self.assertEqual (c.batu (40, 2), 42)
+def test_batu (self):
+  kal = kalkulagailua.Kalkulagailua()
+  self.assertEqual(kal.batu(40, 2), 42)
 ```
 
 Fitxategi `kalkulatzailea.test.ete:
 
 ```python
 import unittest
-kalkulagailuaren inport
+import kalkulagailua
 
-class TestStringMethods (unittest. TestCase):
-def test_suma (self):
-c = kalkulagailua. Kalkulagailua ()
-self.assertEqual (c.batu (40, 2), 42)
+class TestStringMethods(unittest.TestCase):
+    def test_batura(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(kal.batura(40, 2), 42)
 
-def test_restar (self):
-c = kalkulagailua. Kalkulagailua ()
-self.assertEqual (c.restar (40, 2), 38)
+    def test_restar(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(kal.kendu(40, 2), 38)
 
-def test_biderkatu (self):
-c = kalkulagailua. Kalkulagailua ()
-self.assertEqual (c.multiplicar (40, 2), 80)
+    def test_multiplicar(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(c.biderkatu(40, 2), 80)
 
-def test_dividir (self):
-c = kalkulagailua. Kalkulagailua ()
-self.assertEqual (c.dividir (40, 2), 20)
+    def test_dividir(self):
+        kal = kalkulagailua.Kalkulagailua()
+        self.assertEqual(c.zatitu(40, 2), 20)
 
-if __name__ = = '__main__':
-unittest.main ()
+if __name__ == '__main__':
+    unittest.main()
 ```
 
 Orain nahikoa da testen fitxategia exekutatzea, eta hau ikusiko dugu:
@@ -130,19 +130,19 @@ Horretarako, `requirements.txtere 'izeneko testu-fitxategi bat sortzea komeni da
 
 ```console
 #Bertsio zehatz bat instalatzeko
-#nombre_pakete = = bertsioa
+#pakete_izena == bertsioa
 
 #Bertsio berdina edo handiagoa instalatzeko
-#nombre_paquete> = bertsioa
+#pakete_izena >= bertsioa
 
 #Bertsio berriena instalatzeko
-#izena_paketea
+#pakete_izena
 ```
 
 Adibidez, pygame eta testing pakete bat instalatu nahi baditugu, honako hauek jar ditzakegu:
 
 ```console
-pygame = = 1.9.6
+pygame = 1.9.6
 unittest
 ```
 
@@ -164,9 +164,9 @@ Instalatuta dagoela egiaztatuko dugu:
 ```console
 pip3 list
 Package Version
-- --------- -------
+---------- -------
 pip 20.2.2
-ETE 1.9.6
+pygame 1.9.6
 setuptools 49.6.0
 wheel 0.35.1
 ```
@@ -182,30 +182,31 @@ Orain, pygame erabiliko duen fitxategi bat sor dezakegu:
 ```python
 import pygame
 
-pygame.init ()
+pygame.init()
 
-#Set up the drawing, "w"
-screen = pygame.display.set_mode ([500, 500])
+# Set up the drawing window
+screen = pygame.display.set_mode([500, 500])
 
-#Run until the user asks to quit
+# Run until the user asks to quit
 running = True
 while running:
 
-Nola egin dezakezu klik?
-for event in pygame.event.get ():
-if event.type = = pygame. QUIT:
-running = False
+    # Did the user click the window close button?
+    for event in pygame.event.get():
+        if event.type == pygame.QUIT:
+            running = False
 
-#Fill the background with white
-screen.fill (255, 255, 255)
+    # Fill the background with white
+    screen.fill((255, 255, 255))
 
-#Draw a solid blue circle in the center
-pygame.draw.circle (screen, (0, 0, 255), (250, 250), 75)
-#Flip the display
-pygame.display.flip ()
+    # Draw a solid blue circle in the center
+    pygame.draw.circle(screen, (0, 0, 255), (250, 250), 75)
 
-Done! Time to quit.
-pygame.quit ()
+    # Flip the display
+    pygame.display.flip()
+
+# Done! Time to quit.
+pygame.quit()
 ```
 
 Honela jokatuko genuke:
